--- a/src/components/FourthSection/index.css
+++ b/src/components/FourthSection/index.css
@@ -7,7 +7,7 @@
     px-[10%]
     gap-4
     lg:gap-7
-    lg:grid-cols-2
+    /* lg:grid-cols-2 */
 }
 
 .form-row:nth-child(odd){
@@ -18,7 +18,7 @@
 .form-row-input-container{
     @apply
     grid
-    lg:grid-cols-2
+    /* lg:grid-cols-2 */
 
 }
 
@@ -27,7 +27,19 @@
     pl-5
 }
 
-label{
-    @apply
-    pl-2
+.crumb{
+    clip-path: polygon(0% 0%, 100% 0%, 98% 100%, 0% 100%);
 }
+
+.crumb2{
+    clip-path: polygon(2% 0%, 100% 0%, 98% 100%, 0% 100%);
+}
+
+.crumb3{
+    clip-path: polygon(2% 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.grid-container{
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))
+}
+
